--- a/public/css/views/login.css
+++ b/public/css/views/login.css
@@ -8,7 +8,7 @@
 	height: 100%;
 	min-height: 100%;
 	overflow-y: auto;
-	background: var(--gradientbackground);
+	background: var(--defaultbackground);
 }
 
 #logo {
