--- a/public/css/views/questions.css
+++ b/public/css/views/questions.css
@@ -6,8 +6,8 @@
 	--wrong-text-color: #e65e5e;
 }
 
-mark .highlighter {
-	background-color: yellow;
+mark.highlighter {
+	background-color: #ffe48c;
 }
 
 #big-container {
@@ -111,7 +111,7 @@ mark .highlighter {
 	width: calc(100% - 40px);
 	max-width: calc(100% - 40px);
 	font-size: 1.2em;
-	line-height: 1.2;
+	line-height: 1.6;
 	flex-grow: 1;
 	padding: 20px;
 }
@@ -152,6 +152,7 @@ mark .highlighter {
 	min-width: calc(100% - 40px);
 	max-width: calc(100% - 40px);
 	height: 50px;
+	min-height: 50px;
 	padding: 0px 20px 20px;
 }
 
