--- a/public/css/base.css
+++ b/public/css/base.css
@@ -334,7 +334,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	align-items: flex-start;
+	align-items: stretch;
 }
 
 .datacard-content-diff > div {
@@ -358,4 +358,15 @@
 
 #board-data-submitbutton {
 	margin-top: 10px;
+}
+
+@media only screen and (max-width: 800px) {
+	#board-container {
+		width: calc(100% - 10px);
+		padding: 5px;
+	}
+
+	.board-tests-card-right {
+		padding: 20px 4px;
+	}
 }
