--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	overflow-y: auto;
 	background: var(--defaultbackground);
 	/*background-color: #212121;*/
