--- a/public/css/views/create.css
+++ b/public/css/views/create.css
@@ -5,7 +5,8 @@
 	align-items: center;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: auto;
+	min-height: 100%;
 	overflow-y: auto;
 	background: var(--defaultbackground);
 }
@@ -17,6 +18,7 @@
 	width: calc(100% - 80px);
 	height: auto;
 	min-height: 700px;
+	overflow-y: auto;
 	margin: 20px 0;
 	background-color: var(--secondary-color-with-trans);
 	box-shadow: 3px 3px 5px 4px #1a1a1a;
@@ -61,6 +63,8 @@
 
 .board-contents-frame {
 	width: 100%;
+	max-height: 500px;
+	height: auto;
 	overflow-y: auto;
 }
 
@@ -154,13 +158,25 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 	width: 100%;
 	min-width: 100%;
 	height: auto;
 }
 
+.details-content-ele > span {
+	padding-right: 5px;
+}
+
 .details-content-ele .chapter-card-checkbox {
 	/* already vertically aligned; no need for flex containers */
 	margin-right: 5px;
+}
+
+@media only screen and (max-width: 800px) {
+	#actualboard {
+		width: calc(100% - 20px);
+		margin: 10px 0px;
+		padding: 5px;
+	}
 }
