--- a/public/html/views/create.html
+++ b/public/html/views/create.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./../../css/views/create.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script type="module" src="./../../js/views/create.js"></script>
