--- a/public/css/includes/default.css
+++ b/public/css/includes/default.css
@@ -70,7 +70,7 @@ button {
 	--accent-color: #686385;
 	--accent-color-2: #5171c2;
 	--gradientbackground: linear-gradient(#171717, #303030);
-	--defaultbackground: #212121;
+	--defaultbackgroundcolor: #212121;
 
 	--red: #cc7070;
 	--green: #81cc70;
