--- a/public/css/views/create.css
+++ b/public/css/views/create.css
@@ -8,7 +8,7 @@
 	height: auto;
 	min-height: 100%;
 	overflow-y: auto;
-	background: var(--defaultbackground);
+	background-color: var(--defaultbackgroundcolor);
 }
 
 #actualboard {
