--- a/public/css/views/edit.css
+++ b/public/css/views/edit.css
@@ -19,7 +19,7 @@ input {
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
-	background: var(--defaultbackground);
+	background-color: var(--defaultbackgroundcolor);
 }
 
 #actualboard {
