--- a/public/html/views/study.html
+++ b/public/html/views/study.html
@@ -15,7 +15,7 @@
 
 		<title>redef.</title>
 	</head>
-	<body style="max-width: 100%; min-height: 100vh">
+	<body>
 		<div class="alertdialog-container-hidden" id="alertdialog-container" style="display: none;">
 			<button id="alertdialog-textcontainer">
 				<div class="hidden" id="alertdialog-close">
@@ -29,43 +29,6 @@
 		<div id="big-container">
 			<div class="chapter">
 				<div class="chapter-layout">
-					<!-- <div class="chapter-header">
-						<p class="chapter-content-container">Long text here that spans multiple line wyd whatcha doin', your mom is s ch a funny reply</p>
-					</div>
-					<div class="chapter-content">
-						<div class="chapter-content-container chapter-word">
-							<div class="chapter-content-header">
-								<span>Vulcanity is not cool how is it cool i dont get it</span>
-							</div>
-							<div class="chapter-content-words">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent cursus ac urna tempus convallis. Sed a mollis mi. Quisque tincidunt arcu at augue dapibus maximus. Pellentesque tincidunt at neque sit amet euismod. Suspendisse id rhoncus lacus, at tristique metus. Ut non eros ullamcorper, porttitor lectus ac, fringilla magna. Vivamus malesuada rutrum sapien, in aliquam mi sagittis non. Etiam congue libero nunc, eget placerat velit interdum in. Sed scelerisque cursus metus, vel rhoncus mauris vulputate in. Aliquam erat volutpat. Vestibulum mattis eleifend mi at molestie. Donec malesuada odio at massa vestibulum euismod. Etiam mauris turpis, eleifend sed consequat id, malesuada id tortor. Nulla facilisi.
-
-								Aliquam a egestas est. Integer aliquet dui nec nunc volutpat, sit amet aliquet neque iaculis. Sed ac lacus nec elit ullamcorper vehicula posuere eget ipsum. Donec vestibulum tempor ex, et pulvinar arcu ultricies quis. Etiam consequat tempor mi eget vehicula. Mauris hendrerit dignissim ante, tempor gravida orci ullamcorper quis. Aliquam erat volutpat. Mauris auctor dignissim mi, vel dictum erat laoreet eu. Vivamus ac gravida ante, ac aliquet turpis.
-
-								Fusce interdum molestie nibh, sed lacinia diam auctor at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras tempor, quam sit amet dignissim finibus, libero elit ornare elit, a sollicitudin turpis dolor ac dui. Nullam porta nunc sapien, eu feugiat arcu porta sit amet. Sed feugiat magna ut odio vestibulum blandit. Donec commodo libero tortor, sit amet volutpat arcu fermentum quis. Vestibulum sed sem sed neque tristique pellentesque ut ut nisl.
-
-								Nullam vulputate consequat aliquet. Sed vulputate imperdiet vestibulum. Pellentesque vulputate ligula tortor, in aliquam felis pharetra ut. Phasellus mollis velit sit amet velit molestie, et elementum felis tristique. Duis maximus velit in lectus elementum, lacinia bibendum ante ultrices. Aenean vitae sapien et felis ullamcorper feugiat. Vivamus sed cursus magna. Curabitur vestibulum, leo ut bibendum venenatis, mi nunc pulvinar nisl, eleifend tincidunt nunc lacus vitae libero.
-
-								Vestibulum vitae molestie turpis. Etiam mollis cursus massa. Fusce at purus iaculis, malesuada risus at, imperdiet dolor. Suspendisse vehicula, velit nec vestibulum consequat, ipsum velit scelerisque mauris, nec hendrerit odio tellus at ipsum. Nulla faucibus tellus ut purus varius, non dictum ante laoreet. Praesent lacus orci, tempus non enim non, vehicula bibendum urna. Ut posuere lacinia cursus. Praesent sollicitudin felis massa, et volutpat mi dapibus eget.
-							</div>
-							<div class="chapter-content-keywords">
-								abc, hello, there, world, !
-							</div>
-						</div>
-					</div>
-					<div class="chapter-content">
-						<div class="chapter-content-container chapter-word">
-							<div class="chapter-content-header">
-								<span>Vulcanity</span>
-							</div>
-							<div class="chapter-content-words">
-								abcabcabc
-							</div>
-							<div class="chapter-content-keywords">
-								abc, hello, there, world, !
-							</div>
-						</div>
-					</div> -->
 				</div>
 			</div>
 		</div>
