--- a/public/html/views/create.html
+++ b/public/html/views/create.html
@@ -39,6 +39,8 @@
 					<button class="board-selection-collapse" id="board-screen-newtest">
 						Presets ⌄
 					</button>
+					<div class="board-contents-frame" id="presets-contents-frame">
+					</div>
 					<div class="linebreak-container">
 						<div>
 						</div>
