added background-color for body

--- a/public/css/includes/default.css
+++ b/public/css/includes/default.css
@@ -236,4 +236,5 @@ body {
 	font-family: "Tinos", serif;
 	color: #fff;
 	word-wrap: break-word;
+	background-color: var(--defaultbackgroundcolor)
 }
