--- a/public/css/views/questions.css
+++ b/public/css/views/questions.css
@@ -16,8 +16,7 @@ mark.highlighter {
 	position: absolute;
 	width: 100%;
 	height: auto;
-	min-height: 100%;
-	overflow-y: auto;
+	max-height: 100%;
 	background-color: var(--primary-color);
 }
 
