--- a/public/css/base.css
+++ b/public/css/base.css
@@ -153,7 +153,7 @@
 }
 
 .board-tests-card-expanded {
-	max-height: 120px;
+	max-height: 200px;
 }
 
 #board-tests-new:focus {
@@ -333,14 +333,42 @@
 /* modified section */
 .datacard-content-diff {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: stretch;
+
+	margin-top: 10px;
+	margin-bottom: 25px;
 }
 
-.datacard-content-diff > div {
-	/* datacard-content-ele */
-	width: 50%;
+.datacard-content-diff-ele {
+	display: flex;
+	flex-direction: row;
+	flex-grow: 1;
+
+	border-style: solid;
+	border-width: 1px;
+	border-color: white;
+}
+
+.datacard-content-diff > .datacard-content-diff-ele:nth-child(1) {
+	/* top row: remove bottom border */
+	border-bottom-width: 0;
+}
+
+.datacard-content-diff-ele > div {
+	flex-basis: 0;
+	flex-grow: 1;
+
+	padding: 5px;
+	padding-bottom: 5px;
+}
+
+.datacard-content-diff-ele > div:nth-child(1) {
+	/* left most side: add a border */
+	border-style: solid;
+	border-right-width: 1px;
+	border-color: white;
 }
 
 .datacard-content-diff-new1 {
