--- a/public/css/views/study.css
+++ b/public/css/views/study.css
@@ -57,9 +57,34 @@ mark.highlighter {
 }
 
 .chapter-content-header {
+	display: flex;
+	justify-content: space-between;
+
 	padding-top: 5px;
 	padding-bottom: 10px;
 	font-size: 1.8em;
+}
+
+.chapter-content-tts-button {
+	flex-grow: 0;
+	flex-shrink: 0;
+	flex-basis: 26px;
+
+	height: 90%;
+	padding: 5px 0;
+
+	transition: flex-basis 150ms ease-in;
+}
+
+.chapter-content-tts-button:hover {
+	flex-basis: 32px;
+}
+
+.chapter-content-tts-button > img {
+	width: 100%;
+	height: 100%;
+
+	filter: invert(1);
 }
 
 .chapter-content-words {
