major rework of server architect
instead of dumping all the processes, routes into one single server.js, i've upgraded it implement a sort of MVC architect

implemented a custom session handler instead of express-session

--- a/public/html/views/register.html
+++ b/public/html/views/register.html
@@ -32,7 +32,7 @@
 			</div>
 			<form id="interface-card" novalidate>
 				<label class="unselectable" for="username" id="usernameInputLabel">Username</label>
-				<input id="usernameInput" type="text" placeholder="username" name="username" autocomplete="off" title="" required minlength="5" maxlength="25" pattern="^[a-zA-Z\d]*$">
+				<input id="usernameInput" type="text" placeholder="username" name="username" autocomplete="off" title="" required minlength="5" maxlength="25" pattern="^[a-zA-Z\d!@#$%^&*()\-]{6,25}">
 				<label class="unselectable" for="password" id="passwordInputLabel">Password</label>
 				<input id="passwordInput" type="password" placeholder="password" name="password" title="" required minlength="6" maxlength="25" pattern="^[a-zA-Z_\d]*$">
 				<label class="unselectable" for="license" id="licenseInputLabel">License</label>
