--- a/public/css/views/questions.css
+++ b/public/css/views/questions.css
@@ -187,7 +187,9 @@ mark.highlighter {
 	height: auto;
 	min-height: 500px;
 	overflow-y: auto;
+
 	padding: 20px;
+	margin-bottom: 20px;
 }
 
 .resultcard {
