updated credentials requirements
fixed discrepancies in username field where pattern was set to a length of 6 whereas minlength attribute stated 5

increased length limit of passwords to 100

implemented server side checks for updated conditions

--- a/public/html/views/login.html
+++ b/public/html/views/login.html
@@ -22,9 +22,9 @@
 			</div>
 			<form id="interface-card" novalidate>
 				<label class="unselectable" for="username">Username</label>
-				<input id="usernameInput" type="text" placeholder="username" name="username" autocomplete="off" title="" required minlength="5" maxlength="25" pattern="^[a-zA-Z\d!@#$%^&*()\-]{6,25}$">
+				<input id="usernameInput" type="text" placeholder="username" name="username" autocomplete="off" title="" required minlength="5" maxlength="25" pattern="[a-zA-Z\d!@#$%^&*()\-]*">
 				<label class="unselectable" for="password" id="passwordInputLabel">Password</label>
-				<input id="passwordInput" type="password" placeholder="password" name="password" title="" required minlength="6" maxlength="25" pattern="^[a-zA-Z_\d]*$">
+				<input id="passwordInput" type="password" placeholder="password" name="password" title="" required minlength="6" maxlength="100" pattern="[a-zA-Z_\d]*">
 
 				<button id="proceed" type="submit">
 					<span id="submitButtonText">Proceed</span>
